--- a/app/src/main/res/drawable/edit_bg.xml
+++ b/app/src/main/res/drawable/edit_bg.xml
@@ -4,18 +4,18 @@
     <item>
         <shape
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
+            android:shape="rectangle">      //方形
                 <solid android:color="#ffffff"/>
                 <stroke
                     android:width="1dip"
-                    android:color="#030303"
-                    />
+                    android:color="@color/colorBlack"
+                    />      //边的宽度和颜色
                 <padding
                     android:bottom ="10dp"
                     android:left="10dp"
                     android:right="10dp"
                     android:top="10dp" />
-            <corners android:radius = "6dp"/>
+            <corners android:radius = "6dp"/>   //边的长度
         </shape>
     </item>
 </layer-list>
