--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#030303</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlue">#0095E3</color>
+    <color name="colorRed">#C02E4B</color>
 </resources>
